fix: se mejora contraste de color de #githubUser

--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -47,14 +47,8 @@ div.container-flex-row > img {
   padding: 0.1rem;
 }
 
-#message {
+#githubUser {
   color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-#message:focus-visible {
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  outline: none;
 }
 
 .color-white {
@@ -66,6 +60,16 @@ div.container-flex-row > img {
   max-width: 425px;
   height: 5rem;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+#message {
+  color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+#message:focus-visible {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  outline: none;
 }
 
 .container-buttons {
